# pam-oidc-rs

./: Cargo.toml  Dockerfile.dev  README.md  build.rs  compose.yaml
scripts/: ldkc  stackup
src/: config.rs  error.rs  lib.rs  oauth.rs
src/bindings/: mod.rs  pam_ext.rs  pam_modules.rs  pam_modutil.rs
test/: pam-login  pam-system-login  pam_config.yaml  test
test/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  go.mod  go.sum  main.go
