[package]
name = "pam-oidc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pam_oidc"
crate-type = ["rlib", "cdylib"]

[dependencies]
libc = "0.2.149"
oauth2 = "4.4.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.27"
url = "2.4.1"
reqwest = "0.11.22"
pam-bindings = { git = "https://github.com/fire833/pam-rs" }
openidconnect = "3.4.0"
